@@ -31,10 +31,9 @@ swarm_PNGLIB="-lpng"
 swarm_ZLIBLIB="-lz"
 
 swarm_X_LIBS="@X_LIBS@"
-swarm_X_EXTRA_LIBS="@X_EXTRA_LIBS@"
 swarm_GUILIBS="@GUILIBS@"
 
-swarm_SYSLIBS="$swarm_BLTLIB $swarm_TKLIB $swarm_TCLLIB $swarm_PNGLIB $swarm_ZLIBLIB $swarm_FFILIB $swarm_GUILIBS -lobjc -lm"
+swarm_SYSLIBS="${swarm_BLTLIB} ${swarm_TKLIB} ${swarm_TCLLIB} ${swarm_PNGLIB} ${swarm_ZLIBLIB} ${swarm_FFILIB} ${swarm_GUILIBS} -lm"
 
 swarm_SWARMLIBS="-lspace -lanalysis -lsimtools -lsimtoolsgui -ltkobjc -ltclobjc -lactivity -lrandom -lobjectbase -lcollections -ldefobj -lmisc"
 
@@ -43,6 +42,6 @@ swarm_LIBS="@LIBS@"
 ## The final shell variables which are to be substituted in the application
 ## Makefiles(s)
 
-SWARM_LDFLAGS="-L$swarm_libdir @RPATH@$swarm_libdir $swarm_BLTLDFLAGS $swarm_TCLLDFLAGS $swarm_TKLDFLAGS $swarm_FFILDFLAGS $swarm_PNGLDFLAGS $swarm_ZLIBLDFLAGS $swarm_X_LIBS"
+SWARM_LDFLAGS="-L${swarm_libdir} @RPATH@${swarm_libdir} ${swarm_BLTLDFLAGS} ${swarm_TCLLDFLAGS} ${swarm_TKLDFLAGS} ${swarm_FFILDFLAGS} ${swarm_PNGLDFLAGS} ${swarm_ZLIBLDFLAGS} ${swarm_X_LIBS}"
 
-SWARM_LDADD="$swarm_SWARMLIBS $swarm_SYSLIBS $swarm_LIBS"
+SWARM_LDADD="${swarm_SWARMLIBS} ${swarm_SYSLIBS} ${swarm_LIBS}"
